--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://swizkhalifaa.github.io/curriculum-vitae",
+  "homepage": "https://swizkhalifaa.github.io/curriculum-vitae",
   "name": "curriculum-vitae",
   "version": "0.1.0",
   "private": true,
@@ -44,6 +44,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "gh-pages": "^3.2.3"
   }
 }
